# openai-cli

./: .gitignore  .pre-commit-config.yaml  CHANGES.rst  Makefile  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: main.yml
docs/: conf.py
requirements/: base.in  base.txt  ci.in  ci.txt  local.in  local.txt
src/openai_cli/: cli.py  client.py  config.py  test_cli.py  test_client.py  test_config.py
