[metadata]
name = openai-cli
version = 1.0.0
author = Peter Demin
author_email = peterdemin@gmail.com
description = Command-line client for OpenAI API
long_description = file:README.rst
url = https://github.com/peterdemin/openai-cli
classifiers =
    Development Status :: 4 - Beta
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
packages = find:
include_package_data = true
python_requires = >=3.12
install_requires =
    requests
    click

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    openai = openai_cli.cli:cli

[bdist_wheel]
universal = 1
